--- a/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game/LevelPrototyping/Meshes
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -216,7 +216,7 @@ ContentBrowserDrawer.JumpMRU=/All/Game
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-CPP_2024.TimeStamp=2024.09.27-18.03.45
+CPP_2024.TimeStamp=2024.10.02-18.02.57
 CPP_2024.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.08.28-09.14.38
 StorageServerClient.LastCompileMethod=Unknown
