--- a/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,7 +168,7 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/00_Clase/TemplateTesting
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -221,7 +221,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-CPP_2024.TimeStamp=2024.10.08-16.37.53
+CPP_2024.TimeStamp=2024.10.17-18.19.55
 CPP_2024.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.08.28-09.14.38
 StorageServerClient.LastCompileMethod=Unknown
@@ -1339,6 +1339,8 @@ RiderShaderInfo.TimeStamp=2024.09.27-15.12.16
 RiderShaderInfo.LastCompileMethod=Unknown
 RiderLC.TimeStamp=2024.09.27-15.12.19
 RiderLC.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2024.08.28-09.14.36
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -1410,6 +1412,131 @@ ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 PaperSpriteComponent="\"Object\" "
 MeshComponent="\"Object\" "
+GeneralProjectSettings="\"Object\" "
+CryptoKeysSettings="\"Object\" "
+GameplayTagsSettings="\"Object\" "
+GameplayTagsList="\"Object\" "
+GameMapsSettings="\"Object\" "
+MoviePlayerSettings="\"Object\" "
+ProjectPackagingSettings="\"Object\" "
+HardwareTargetingSettings="\"Object\" "
+AssetManagerSettings="\"Object\" "
+AssetToolsSettings="\"Object\" "
+SlateRHIRendererSettings="\"Object\" "
+AISystem="\"Object\" "
+AISystemBase="\"Object\" "
+AnimationSettings="\"Object\" "
+AnimationModifierSettings="\"Object\" "
+AudioSettings="\"Object\" "
+ChaosSolverSettings="\"Object\" "
+CineCameraSettings="\"Object\" "
+ConsoleSettings="\"Object\" "
+ControlRigSettings="\"Object\" "
+CookerSettings="\"Object\" "
+CrowdManager="\"Object\" "
+CrowdManagerBase="\"Object\" "
+DataDrivenConsoleVariableSettings="\"Object\" "
+DebugCameraControllerSettings="\"Object\" "
+EnhancedInputDeveloperSettings="\"Object\" "
+InputModifierSmoothDelta="\"Object\" "
+InputModifier="\"Object\" "
+InputModifierDeadZone="\"Object\" "
+InputModifierResponseCurveExponential="\"Object\" "
+InputModifierFOVScaling="\"Object\" "
+InputTriggerDown="\"Object\" "
+InputTrigger="\"Object\" "
+InputTriggerPressed="\"Object\" "
+InputTriggerReleased="\"Object\" "
+InputTriggerHold="\"Object\" "
+InputTriggerTimedBase="\"Object\" "
+InputTriggerHoldAndRelease="\"Object\" "
+InputTriggerTap="\"Object\" "
+InputTriggerPulse="\"Object\" "
+EnhancedInputEditorProjectSettings="\"Object\" "
+GameplayDebuggerConfig="\"Object\" "
+GarbageCollectionSettings="\"Object\" "
+Engine="\"Object\" "
+HierarchicalLODSettings="\"Object\" "
+InputSettings="\"Object\" "
+InterchangeProjectSettings="\"Object\" "
+GLTFPipelineSettings="\"Object\" "
+MaterialXPipelineSettings="\"Object\" "
+LandscapeSettings="\"Object\" "
+LevelSequenceProjectSettings="\"Object\" "
+MeshBudgetProjectSettings="\"Object\" "
+MeshDrawCommandStatsSettings="\"Object\" "
+MetaSoundSettings="\"Object\" "
+NavigationSystemV1="\"Object\" "
+NavigationSystemBase="\"Object\" "
+NetworkSettings="\"Object\" "
+PhysicsSettings="\"Object\" "
+PhysicsSettingsCore="\"Object\" "
+RendererSettings="\"Object\" "
+RendererOverrideSettings="\"Object\" "
+SlateSettings="\"Object\" "
+StreamingSettings="\"Object\" "
+TextureEncodingProjectSettings="\"Object\" "
+UserInterfaceSettings="\"Object\" "
+VirtualTexturePoolConfig="\"Object\" "
+WorldPartitionSettings="\"Object\" "
+LevelEditor2DSettings="\"Object\" "
+EditorProjectAppearanceSettings="\"Object\" "
+EditorProjectAssetSettings="\"Object\" "
+BlueprintEditorProjectSettings="\"Object\" "
+ClassViewerProjectSettings="\"Object\" "
+DDCProjectSettings="\"Object\" "
+EditorUtilityWidgetProjectSettings="\"Object\" "
+WidgetEditingProjectSettings="\"Object\" "
+ProxyLODMeshSimplificationSettings="\"Object\" "
+LevelEditorProjectSettings="\"Object\" "
+LevelInstanceEditorSettings="\"Object\" "
+MovieSceneToolsProjectSettings="\"Object\" "
+MeshSimplificationSettings="\"Object\" "
+PaperImporterSettings="\"Object\" "
+EditorPerformanceProjectSettings="\"Object\" "
+SourceControlPreferences="\"Object\" "
+SkeletalMeshSimplificationSettings="\"Object\" "
+PlasticSourceControlProjectSettings="\"Object\" "
+StructViewerProjectSettings="\"Object\" "
+TextureImportSettings="\"Object\" "
+UMGEditorProjectSettings="\"Object\" "
+AndroidRuntimeSettings="\"Object\" "
+ShaderPlatformQualitySettings="\"Object\" "
+AndroidSDKSettings="\"Object\" "
+IOSRuntimeSettings="\"Object\" "
+LinuxTargetSettings="\"Object\" "
+MacTargetSettings="\"Object\" "
+WindowsTargetSettings="\"Object\" "
+XcodeProjectSettings="\"Object\" "
+AndroidFileServerRuntimeSettings="\"Object\" "
+AvfMediaSettings="\"Object\" "
+DataflowSettings="\"Object\" "
+FractureModeSettings="\"Object\" "
+GeometryCacheStreamerSettings="\"Object\" "
+GooglePADRuntimeSettings="\"Object\" "
+ImgMediaSettings="\"Object\" "
+ToolPresetProjectSettings="\"Object\" "
+LevelSequenceEditorSettings="\"Object\" "
+ModelingToolsEditorModeSettings="\"Object\" "
+ModelingComponentsSettings="\"Object\" "
+NiagaraSettings="\"Object\" "
+NiagaraEditorSettings="\"Object\" "
+PaperRuntimeSettings="\"Object\" "
+PythonScriptPluginSettings="\"Object\" "
+RenderDocPluginSettings="\"Object\" "
+ResonanceAudioSettings="\"Object\" "
+TakeRecorderProjectSettings="\"Object\" "
+MovieSceneTakeSettings="\"Object\" "
+TakeRecorderMicrophoneAudioSourceSettings="\"Object\" "
+TakeRecorderSource="\"Object\" "
+TakeRecorderMicrophoneAudioManager="\"Object\" "
+TakeRecorderAudioInputSettings="\"Object\" "
+MovieSceneAnimationTrackRecorderEditorSettings="\"Object\" "
+MovieSceneTrackRecorderSettings="\"Object\" "
+TakeRecorderWorldSourceSettings="\"Object\" "
+TcpMessagingSettings="\"Object\" "
+UdpMessagingSettings="\"Object\" "
+WmfMediaSettings="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1720,7 +1847,7 @@ PaperSpriteComponent.Cooking=True
 PaperSpriteComponent.Materials=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=True
 RecentAssetEditors=BlueprintEditor
 
