--- a/CPP_2024/Config/DefaultEngine.ini
+++ b/CPP_2024/Config/DefaultEngine.ini
@@ -76,3 +76,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/CPP_2024.Spawner.EnenmyClass",NewName="/Script/CPP_2024.Spawner.EnemyClass")
