--- a/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,7 +168,7 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/UClassTesting
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -223,7 +223,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-CPP_2024.TimeStamp=2024.11.01-01.12.33
+CPP_2024.TimeStamp=2024.11.08-11.08.22
 CPP_2024.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.08.28-09.14.38
 StorageServerClient.LastCompileMethod=Unknown
@@ -1347,6 +1347,12 @@ EOSShared.TimeStamp=2024.08.28-09.15.42
 EOSShared.LastCompileMethod=Unknown
 Fab.TimeStamp=2024.10.24-14.23.21
 Fab.LastCompileMethod=Unknown
+SubsystemBrowser.TimeStamp=2024.11.08-10.59.40
+SubsystemBrowser.LastCompileMethod=Unknown
+SubsystemSettingsEditor.TimeStamp=2024.11.08-10.59.42
+SubsystemSettingsEditor.LastCompileMethod=Unknown
+SubsystemBrowserTests.TimeStamp=2024.11.08-10.59.40
+SubsystemBrowserTests.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -1547,6 +1553,8 @@ BP_Spawner_C="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 Spawner="\"Object\" "
+MegascansMaterialParentSettings="\"Object\" "
+SubsystemBrowserSettings="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1956,17 +1964,351 @@ BP_Spawner_C.Spawner=True
 BP_Spawner_C.Default=True
 BP_Enemy_C.Networking=True
 BP_Enemy_C.Materials=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Gameplay Tags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Advanced Copy=True
+SlateRHIRendererSettings.PostProcessing=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.EQS=True
+AISystem.Blackboard=True
+AISystem.Behavior Tree=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AnimationSettings.AnimationAttributes=True
+AnimationSettings.Mirroring=True
+AnimationSettings.AnimationData=True
+AnimationModifierSettings.Modifiers=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+AudioSettings.Debug=True
+ChaosSolverSettings.GameInstance=True
+CineCameraSettings.Lens=True
+CineCameraSettings.Filmback=True
+CineCameraSettings.Crop=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+ControlRigSettings.Shapes=True
+ControlRigSettings.ModularRigging=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DataDrivenConsoleVariableSettings.DataDrivenCVar=True
+DebugCameraControllerSettings.General=True
+EnhancedInputDeveloperSettings.Enhanced Input=True
+InputModifierSmoothDelta.Settings=True
+InputModifierDeadZone.Settings=True
+InputModifierResponseCurveExponential.Settings=True
+InputModifierFOVScaling.Settings=True
+EnhancedInputDeveloperSettings.Modifier Default Values=True
+InputTriggerDown.Trigger Settings=True
+InputTriggerPressed.Trigger Settings=True
+InputTriggerReleased.Trigger Settings=True
+InputTriggerHold.Trigger Settings=True
+InputTriggerHoldAndRelease.Trigger Settings=True
+InputTriggerTap.Trigger Settings=True
+InputTriggerPulse.Trigger Settings=True
+EnhancedInputDeveloperSettings.Trigger Default Values=True
+EnhancedInputEditorProjectSettings.Default=True
+MegascansMaterialParentSettings.Parent Materials=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+GarbageCollectionSettings.Debug=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.Platforms=True
+InputSettings.ViewportProperties=True
+InputSettings.Input=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.DefaultClasses=True
+InputSettings.Console=True
+InterchangeProjectSettings.ImportContent=True
+InterchangeProjectSettings.ImportIntoLevel=True
+InterchangeProjectSettings.EditorInterface=True
+InterchangeProjectSettings.Generic=True
+InterchangeProjectSettings.Editor Generic Pipeline Class=True
+GLTFPipelineSettings.PredefinedglTFMaterialLibrary=True
+MaterialXPipelineSettings.MaterialXPredefined . Surface Shaders=True
+MaterialXPipelineSettings.MaterialXPredefined . BSDF=True
+MaterialXPipelineSettings.MaterialXPredefined . EDF=True
+MaterialXPipelineSettings.MaterialXPredefined . VDF=True
+LandscapeSettings.Layers=True
+LandscapeSettings.Configuration=True
+LandscapeSettings.Materials=True
+LandscapeSettings.HLOD=True
+LevelSequenceProjectSettings.Timeline=True
+MeshBudgetProjectSettings.StaticMesh=True
+MeshDrawCommandStatsSettings.Engine=True
+MetaSoundSettings.AutoUpdate=True
+MetaSoundSettings.Registration=True
+MetaSoundSettings.Quality=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Collision=True
+RecastNavMesh.HLOD=True
+RecastNavMesh.Physics=True
+RecastNavMesh.Networking=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.WorkingColorSpace=True
+RendererSettings.GlobalIllumination=True
+RendererSettings.Reflections=True
+RendererSettings.Lumen=True
+RendererSettings.Shadows=True
+RendererSettings.HardwareRayTracing=True
+RendererSettings.SoftwareRayTracing=True
+RendererSettings.Nanite=True
+RendererSettings.MiscLighting=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Translucency=True
+RendererSettings.VR=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.DefaultScreenPercentage=True
+RendererSettings.Optimizations=True
+RendererSettings.LightFunctionAtlas=True
+RendererSettings.Debugging=True
+RendererSettings.Mesh Streaming=True
+RendererSettings.Heterogeneous Volumes=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.Substrate=True
+RendererSettings.HairStrands=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererSettings.Skinning=True
+RendererSettings.PostProcessCalibrationMaterials=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TextureEncodingProjectSettings.EncodeSettings=True
+TextureEncodingProjectSettings.EncodeSpeedSettings=True
+TextureEncodingProjectSettings.EncodeSpeeds=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+UserInterfaceSettings.UMG Fonts=True
+VirtualTexturePoolConfig.PoolConfig=True
+WorldPartitionSettings.WorldPartition=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+EditorProjectAppearanceSettings.ReferenceViewer=True
+EditorProjectAssetSettings.Redirectors=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+BlueprintEditorProjectSettings.Experimental=True
+BlueprintEditorProjectSettings.Play=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+DDCProjectSettings.Warnings=True
+EditorUtilityWidgetProjectSettings.Designer=True
+EditorUtilityWidgetProjectSettings.Compiler=True
+EditorUtilityWidgetProjectSettings.Class Filtering=True
+EditorUtilityWidgetProjectSettings.Class Settings=True
+ProxyLODMeshSimplificationSettings.General=True
+LevelEditorProjectSettings.Editing=True
+LevelInstanceEditorSettings.World Partition=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+EditorPerformanceProjectSettings.ViewportResolution=True
+SourceControlPreferences.SourceControl=True
+SkeletalMeshSimplificationSettings.General=True
+PlasticSourceControlProjectSettings.Unity Version Control=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+TextureImportSettings.ImportSettings=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Class Settings=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+AndroidRuntimeSettings.Misc=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.RequiredIOSIcons=True
+IOSRuntimeSettings.OptionalIOSIcons=True
+IOSRuntimeSettings.RequiredTVOSAssets=True
+IOSRuntimeSettings.OptionalTVOSAssets=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.Remote Build=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Packaging=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+WindowsTargetSettings.D3D12 Targeted Shader Formats=True
+WindowsTargetSettings.D3D11 Targeted Shader Formats=True
+WindowsTargetSettings.Vulkan Targeted Shader Formats=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+XcodeProjectSettings.Xcode=True
+XcodeProjectSettings.Plist Files=True
+XcodeProjectSettings.Entitlements=True
+XcodeProjectSettings.Code Signing=True
+XcodeProjectSettings.Privacy Manifests=True
+AndroidFileServerRuntimeSettings.Packaging=True
+AndroidFileServerRuntimeSettings.Deployment=True
+AndroidFileServerRuntimeSettings.Connection=True
+AvfMediaSettings.Debug=True
+DataflowSettings.PinColors=True
+DataflowSettings.NodeColors=True
+FractureModeSettings.Fracture Mode=True
+GeometryCacheStreamerSettings.Geometry Cache Streamer=True
+GooglePADRuntimeSettings.Packaging=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+ToolPresetProjectSettings.Interactive Tool Presets=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+ModelingToolsEditorModeSettings.Modeling Mode=True
+ModelingComponentsSettings.Modeling Tools=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Viewport=True
+NiagaraSettings.SimulationCaching=True
+NiagaraSettings.Scalability=True
+NiagaraSettings.Renderer=True
+NiagaraSettings.LightRenderer=True
+NiagaraSettings.SkeletalMeshDI=True
+NiagaraSettings.StaticMeshDI=True
+NiagaraSettings.AsyncGpuTraceDI=True
+NiagaraSettings.SimCache=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.SimulationOptions=True
+NiagaraEditorSettings.Niagara Colors=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+PythonScriptPluginSettings.Python=True
+PythonScriptPluginSettings.PythonPipInstall=True
+PythonScriptPluginSettings.PythonRemoteExecution=True
+RenderDocPluginSettings.Frame Capture Settings=True
+RenderDocPluginSettings.Advanced Settings=True
+ResonanceAudioSettings.Reverb=True
+ResonanceAudioSettings.General=True
+TakeRecorderProjectSettings.Take Recorder=True
+TakeRecorderProjectSettings.Movie Scene Take Settings=True
+TakeRecorderProjectSettings.Microphone Audio Recorder=True
+TakeRecorderProjectSettings.Audio Input Device=True
+TakeRecorderProjectSettings.Animation Recorder=True
+TakeRecorderProjectSettings.World Recorder=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Availability=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=True
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/UClassTesting/BP_Enemy.BP_Enemy
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
 BlueprintEditorSettings=True
+GeneralProjectSettings=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=True
@@ -2084,4 +2426,48 @@ MRUItem1=/Game/00_Clase/TemplateTesting/BP_TestTemplateActor
 
 [MRU]
 MRUItem0=/Game/00_Clase/L_Test
+
+[PluginBrowser]
+InstalledPlugins=OculusXR
+InstalledPlugins=WMFCodecs
+
+[/Script/SubsystemBrowser.SubsystemBrowserSettings]
+bShowOnlyGameModules=False
+bShowOnlyPluginModules=False
+bHideEmptyCategories=False
+bShowOnlyWithViewableElements=False
+bForceHiddenPropertyVisibility=False
+bShowAnyProperties=False
+bShowAnyConfigProperties=False
+bEditAnyProperties=False
+bEditAnyConfigProperties=False
+MaxColumnTogglesToShow=4
+MaxCategoryTogglesToShow=6
+bEnableColoring=False
+bEnableStaleColor=False
+StaleStateColor=(R=0.750000,G=0.750000,B=0.750000,A=1.000000)
+bEnableSelectedColor=False
+SelectedStateColor=(R=0.828000,G=0.364000,B=0.003000,A=1.000000)
+bEnableColoringGameModule=False
+GameModuleColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+bEnableColoringEngineModule=False
+EngineModuleColor=(R=0.750000,G=0.750000,B=0.750000,A=1.000000)
+bShowDetailedTooltips=False
+CategoryVisibilityState=(Name="EngineSubsystemCategory",bValue=True)
+CategoryVisibilityState=(Name="EditorSubsystemCategory",bValue=True)
+CategoryVisibilityState=(Name="GameInstanceCategory",bValue=True)
+CategoryVisibilityState=(Name="WorldSubsystemCategory",bValue=True)
+CategoryVisibilityState=(Name="PlayerCategory",bValue=True)
+TreeExpansionState=(Name="EngineSubsystemCategory",bValue=True)
+TreeExpansionState=(Name="EditorSubsystemCategory",bValue=True)
+TreeExpansionState=(Name="WorldSubsystemCategory",bValue=True)
+TreeExpansionState=(Name="GameInstanceCategory",bValue=True)
+TreeExpansionState=(Name="PlayerCategory",bValue=True)
+TableColumnVisibilityState=(Name="Module",bValue=True)
+TableColumnVisibilityState=(Name="Config",bValue=False)
+TableColumnVisibilityState=(Name="Plugin",bValue=False)
+HorizontalSeparatorLocation=1.269259
+bUseSubsystemSettings=False
+bUseCustomSettingsWidget=False
+bUseCustomPropertyFilter=False
 
