--- a/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,7 +131,6 @@ LastExecutedLaunchName=DESKTOP-7QPVO3C
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -168,7 +167,7 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game/00_Clase/Actions
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -176,8 +175,8 @@ ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
 ContentBrowserTab1.PathSearchAreaExpanded=False
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.343400925
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.556599319
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
@@ -200,7 +199,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/00_Clase/TemplateTesting
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -212,8 +211,12 @@ ContentBrowserDrawer.JumpMRU=/All/Game/00_Clase
 ContentBrowserDrawer.JumpMRU=/All/Game/00_Clase/NewFolder
 ContentBrowserDrawer.JumpMRU=/All/Game/NewFolder
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserTab1.JumpMRU=/All/Game/00_Clase/TemplateTesting
+ContentBrowserTab1.JumpMRU=/All/Game/00_Clase/Actions
+ContentBrowserTab1.JumpMRU=/All/Game/00_Clase/NewFolder
 ContentBrowserTab1.JumpMRU=/All/Game/00_Clase
+ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson
+ContentBrowserTab1.JumpMRU=/All/Game/00_Clase/TemplateTesting
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
@@ -223,7 +226,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-CPP_2024.TimeStamp=2024.11.08-11.08.22
+CPP_2024.TimeStamp=2024.11.12-09.26.39
 CPP_2024.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.08.28-09.14.38
 StorageServerClient.LastCompileMethod=Unknown
@@ -1353,11 +1356,15 @@ SubsystemSettingsEditor.TimeStamp=2024.11.08-10.59.42
 SubsystemSettingsEditor.LastCompileMethod=Unknown
 SubsystemBrowserTests.TimeStamp=2024.11.08-10.59.40
 SubsystemBrowserTests.LastCompileMethod=Unknown
+Voice.TimeStamp=2024.08.28-09.14.38
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2024.08.28-09.14.36
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.AttributeSubsystem.RegisterAttrOwners\" "
 EditorStyleSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
 AudioEditorSettings="\"Object\" "
@@ -1555,6 +1562,11 @@ SkinnedMeshComponent="\"Object\" "
 Spawner="\"Object\" "
 MegascansMaterialParentSettings="\"Object\" "
 SubsystemBrowserSettings="\"Object\" "
+SpringArmComponent="\"Object\" "
+AttributeComponent="\"Object\" "
+AttributeSubsystem="\"Object\" \"Object.AttributeSubsystem.RegisterAttrOwners\" "
+WorldSubsystem="\"Object\" \"Object.AttributeSubsystem.RegisterAttrOwners\" "
+Subsystem="\"Object\" \"Object.AttributeSubsystem.RegisterAttrOwners\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2298,12 +2310,100 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
+BP_ThirdPersonCharacter_C.TransformCommon=True
+BP_ThirdPersonCharacter_C.Animation=True
+BP_ThirdPersonCharacter_C.Mesh=True
+BP_ThirdPersonCharacter_C.CameraSettings=True
+BP_ThirdPersonCharacter_C.CameraOptions=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.Camera=True
+BP_ThirdPersonCharacter_C.CameraCollision=True
+BP_ThirdPersonCharacter_C.ComponentTick=True
+BP_ThirdPersonCharacter_C.Lag=True
+BP_ThirdPersonCharacter_C.Physics=True
+BP_ThirdPersonCharacter_C.Collision=True
+BP_ThirdPersonCharacter_C.Lighting=True
+BP_ThirdPersonCharacter_C.Tags=True
+BP_ThirdPersonCharacter_C.AssetUserData=True
+BP_ThirdPersonCharacter_C.LOD=True
+BP_ThirdPersonCharacter_C.Replication=True
+BP_ThirdPersonCharacter_C.SkinWeights=True
+BP_ThirdPersonCharacter_C.ComponentReplication=True
+BP_ThirdPersonCharacter_C.Rendering=True
+BP_ThirdPersonCharacter_C.Activation=True
+BP_ThirdPersonCharacter_C.Variable=True
+BP_ThirdPersonCharacter_C.Navigation=True
+BP_ThirdPersonCharacter_C.Cooking=True
+BP_ThirdPersonCharacter_C.PostProcess=True
+BP_ThirdPersonCharacter_C.Input=True
+BP_ThirdPersonCharacter_C.Clothing=True
+BP_ThirdPersonCharacter_C.LeaderPoseComponent=True
+BP_ThirdPersonCharacter_C.AnimationRig=True
+BP_ThirdPersonCharacter_C.Deformer=True
+BP_ThirdPersonCharacter_C.HLOD=True
+BP_ThirdPersonCharacter_C.Mobile=True
+BP_ThirdPersonCharacter_C.RayTracing=True
+BP_ThirdPersonCharacter_C.VirtualTexture=True
+BP_ThirdPersonCharacter_C.Character Movement (General Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Walking=True
+BP_ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_ThirdPersonCharacter_C.Character Movement: Gravity=True
+BP_ThirdPersonCharacter_C.Character Movement (Networking)=True
+BP_ThirdPersonCharacter_C.Character Movement: Swimming=True
+BP_ThirdPersonCharacter_C.Character Movement: Flying=True
+BP_ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+BP_ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_ThirdPersonCharacter_C.Character Movement=True
+BP_ThirdPersonCharacter_C.Character Movement: Avoidance=True
+BP_ThirdPersonCharacter_C.RootMotion=True
+BP_ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_ThirdPersonCharacter_C.NavMovement=True
+BP_ThirdPersonCharacter_C.Velocity=True
+BP_ThirdPersonCharacter_C.PlanarMovement=True
+BP_ThirdPersonCharacter_C.MovementComponent=True
+BP_ThirdPersonCharacter_C.Shape=True
+BP_ThirdPersonCharacter_C.Character=True
+BP_ThirdPersonCharacter_C.Pawn=True
+BP_ThirdPersonCharacter_C.Actor=True
+BP_ThirdPersonCharacter_C.Events=True
+BP_ThirdPersonCharacter_C.Materials=True
+AttributeComponent.Variable=True
+AttributeComponent.Sockets=True
+AttributeComponent.Tags=True
+AttributeComponent.ComponentTick=True
+AttributeComponent.ComponentReplication=True
+AttributeComponent.Activation=True
+AttributeComponent.Cooking=True
+AttributeComponent.Events=True
+AttributeSubsystem.AttributeSubsystem=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=True
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/00_Clase/Actions/BP_Jump.BP_Jump
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2416,13 +2516,17 @@ RecentlyPlaced=/Game/UClassTesting/BP_GeneralTesting.BP_GeneralTesting;
 RecentlyPlaced=/Game/00_Clase/TemplateTesting/BP_TestTemplateActor.BP_TestTemplateActor;
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UClassTesting/BP_Enemy
-MRUItem1=/Game/00_Clase/TemplateTesting/BP_TestTemplateActor
+MRUItem0=/Game/00_Clase/Actions/BP_Jump
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/00_Clase/TemplateTesting/BP_TestTemplateActor
+MRUItem3=/Game/UClassTesting/BP_Enemy
 
 [AssetEditorToolkitTabLocation]
 /Game/00_Clase/TemplateTesting/BP_TestTemplateActor.BP_TestTemplateActor=0
 /Game/UClassTesting/BP_Spawner.BP_Spawner=0
 /Game/UClassTesting/BP_Enemy.BP_Enemy=0
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
+/Game/00_Clase/Actions/BP_Jump.BP_Jump=0
 
 [MRU]
 MRUItem0=/Game/00_Clase/L_Test
@@ -2458,7 +2562,7 @@ CategoryVisibilityState=(Name="EditorSubsystemCategory",bValue=True)
 CategoryVisibilityState=(Name="GameInstanceCategory",bValue=True)
 CategoryVisibilityState=(Name="WorldSubsystemCategory",bValue=True)
 CategoryVisibilityState=(Name="PlayerCategory",bValue=True)
-TreeExpansionState=(Name="EngineSubsystemCategory",bValue=True)
+TreeExpansionState=(Name="EngineSubsystemCategory",bValue=False)
 TreeExpansionState=(Name="EditorSubsystemCategory",bValue=True)
 TreeExpansionState=(Name="WorldSubsystemCategory",bValue=True)
 TreeExpansionState=(Name="GameInstanceCategory",bValue=True)
@@ -2466,7 +2570,7 @@ TreeExpansionState=(Name="PlayerCategory",bValue=True)
 TableColumnVisibilityState=(Name="Module",bValue=True)
 TableColumnVisibilityState=(Name="Config",bValue=False)
 TableColumnVisibilityState=(Name="Plugin",bValue=False)
-HorizontalSeparatorLocation=1.269259
+HorizontalSeparatorLocation=1.364643
 bUseSubsystemSettings=False
 bUseCustomSettingsWidget=False
 bUseCustomPropertyFilter=False
