Subsistema de acciones

--- a/CPP_2024/Config/DefaultEngine.ini
+++ b/CPP_2024/Config/DefaultEngine.ini
@@ -79,3 +79,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/CPP_2024.Spawner.EnenmyClass",NewName="/Script/CPP_2024.Spawner.EnemyClass")
++FunctionRedirects=(OldName="/Script/CPP_2024.CustomActionBase.DoAction_Event",NewName="/Script/CPP_2024.CustomActionBase.RecieveDoAction")
