--- a/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -226,7 +226,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-CPP_2024.TimeStamp=2024.11.19-09.25.09
+CPP_2024.TimeStamp=2024.11.28-09.46.33
 CPP_2024.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.08.28-09.14.38
 StorageServerClient.LastCompileMethod=Unknown
@@ -2418,16 +2418,13 @@ K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=True
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/00_Clase/Actions/BP_Jump.BP_Jump
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/00_Clase/Actions/BP_Explode.BP_Explode
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
