--- a/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,10 +164,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeHashSet=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -226,7 +226,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-CPP_2024.TimeStamp=2024.11.28-09.46.33
+CPP_2024.TimeStamp=2024.12.12-11.13.17
 CPP_2024.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.08.28-09.14.38
 StorageServerClient.LastCompileMethod=Unknown
@@ -2418,7 +2418,7 @@ K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=True
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
