--- a/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CPP_2024/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,10 +164,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeHashSet=
+WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Architecture
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -187,13 +187,35 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game/Async
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.JumpMRU=/All/Game/Async
+ContentBrowserDrawer.JumpMRU=/All/Game/NewFolder
+ContentBrowserDrawer.JumpMRU=/All/Game
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-UTHUB_CPP2024.TimeStamp=2024.12.12-17.41.14
-UTHUB_CPP2024.LastCompileMethod=Unknown
+UTHUB_CPP2024.TimeStamp=2024.12.16-18.03.44
+UTHUB_CPP2024.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.08.28-09.14.38
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2024.08.28-09.14.35
@@ -1329,6 +1351,8 @@ InstalledPlugins=WMFCodecs
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1349,6 +1373,31 @@ WorldSettings.Nanite=True
 WorldSettings.Audio=True
 WorldSettings.Tick=True
 WorldSettings.Networking=True
+BP_AsyncTest_C.TransformCommon=True
+BP_AsyncTest_C.Rendering=True
+BP_AsyncTest_C.Default=True
+BP_AsyncTest_C.Replication=True
+BP_AsyncTest_C.Collision=True
+BP_AsyncTest_C.HLOD=True
+BP_AsyncTest_C.Physics=True
+BP_AsyncTest_C.Networking=True
+BP_AsyncTest_C.Input=True
+BP_AsyncTest_C.Actor=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
 
 [/Script/SubsystemBrowser.SubsystemBrowserSettings]
 bShowOnlyGameModules=False
@@ -1389,7 +1438,7 @@ bUseCustomSettingsWidget=False
 bUseCustomPropertyFilter=False
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -1441,4 +1490,7 @@ Project=C:/Program Files/Epic Games/UE_5.4/
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[PlacementMode]
+RecentlyPlaced=/Game/Async/BP_AsyncTest.BP_AsyncTest;
 
